cc: Update scroll offset before property tree scrolling and animation.

In LayerTreeHostInProcess::FinishCommitOnImplThread, scroll offset in
scroll tree was updated after updating scrolling and animation.

Previously we actively update scroll offset in transform tree when we
later pushing scroll offset map from main to impl. So transform node's
scroll offset is always up-to-date.

However in LayoutTests, we sometimes do not create pending tree. When
pushing directly from main to active, we fail to detect change if the
following criteria are met:

1) current_scroll_offset != new_scroll_offset;
2) new_scroll_offset.pending_value == new_scroll_offset.active_value.

This results in not updating the inner viewport scroll layer when we use
the same renderer and reset page scale factor.

BUG=648785
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2393213002
Cr-Commit-Position: refs/heads/master@{#425353}

Former-commit-id: 41781b5c4d26bc86779212a9dea21e36d0566622